--- a/WebContent/resources/css/friends1.css
+++ b/WebContent/resources/css/friends1.css
@@ -13,6 +13,7 @@ div {
 	z-index: 1;
 	position: fixed;
 	width: 99%;
+	width: 1333px;
 	margin-top: -20px;
 	height: 50px;
 	background-color:  #e68a00;
